src/objects/Boutique_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Boutique__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Boutique Resource</relationshipLabel>
        <relationshipName>Boutique_Resource</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Boutique Resource</relationshipLabel>
        <relationshipName>Boutique_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Family</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service</valueSetName>
        </valueSet>
    </fields>
    <label>Boutique Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Team_members</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Boutique_Resource__c.Team_Member</value>
        </filters>
        <label>Team members</label>
    </listViews>
    <nameField>
        <label>Boutique Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boutique Resource</pluralLabel>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purpose_of_Visit</fullName>
        <active>true</active>
        <label>Purpose of Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Team_Member</fullName>
        <active>true</active>
        <label>Team Member</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>